# cryptoarb

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backtest/: __init__.py  engine.py  execution_sim.py  walk_forward.py
config/: live.yaml  main.yaml
data/: __init__.py  downloader.py  normalizer.py
data/raw/: .gitkeep
optimization/: __init__.py  opportunity_ranker.py  param_search.py  robust_eval.py  stress_tests.py
paper_trading/: paper_trader.py
portfolio/: __init__.py  analytics.py  health_monitor.py  profit_model.py  risk.py
scripts/: async_download_data.py  calibrate_execution.py  generate_comparison_report.py  run_comprehensive_benchmark.py  run_go_no_go.py  run_live_screener.py  run_param_matrix.py  run_robustness_suite.py
strategies/: __init__.py  base.py  basis_revert.py  perp_perp.py  spot_perp.py  statarb.py
tests/: test_accounting_parity.py  test_calibrate_execution.py  test_comprehensive_benchmark.py  test_execution_partial_fill.py  test_go_no_go.py  test_metrics_risk_free.py  test_profit_model_and_ranker.py  test_risk_engine_extensions.py  test_robust_eval.py  test_runtime_safeguards.py  test_spot_perp_pairing.py  test_statarb_pairing.py  test_stress_suite.py  test_trade_record_accounting.py  test_walk_forward_validation.py
